Default dark theme converted to simple format

--- a/NetCoreCMS.Web/Themes/DefaultDark/Shared/Layouts/_HomeLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/DefaultDark/Shared/Layouts/_HomeLayout.cshtml
@@ -1,7 +1,28 @@
 ﻿@{
+    int bodyClassWidth = 12;
+    bool hasLeftColumn = false;
+    bool hasRightColumn = false;
     //var WebSite = GlobalConfig.WebSite;
     ViewBag.WebSite = GlobalConfig.WebSite;
-    ViewBag.CurrentLayout = "FullWidthLayout";
+    ViewBag.CurrentLayout = "HomeLayout";
+
+    /*Special Calculation for left and right column show hide*/
+    var menusLeft = GlobalConfig.Menus.Where(x => x.Position == "LeftColumn").ToList();
+    var zoneLeftWidgets = GlobalConfig.WebSiteWidgets.Where(x => x.Zone == "LeftSidebar" && x.LayoutName == ViewBag.CurrentLayout).ToList();
+    if ((menusLeft != null && menusLeft.Count > 0) || (zoneLeftWidgets != null && zoneLeftWidgets.Count > 0))
+    {
+        hasLeftColumn = true;
+        bodyClassWidth = bodyClassWidth - 2;
+    }
+
+    var menusRight = GlobalConfig.Menus.Where(x => x.Position == "RightColumn").ToList();
+    var zoneRightWidgets = GlobalConfig.WebSiteWidgets.Where(x => x.Zone == "RightSidebar" && x.LayoutName == ViewBag.CurrentLayout).ToList();
+    if ((menusRight != null && menusRight.Count > 0) || (zoneRightWidgets != null && zoneRightWidgets.Count > 0))
+    {
+        hasRightColumn = true;
+        bodyClassWidth = bodyClassWidth - 2;
+    }
+    /*Special Calculation for left and right column show hide*/
 }
 
 <!DOCTYPE html>
@@ -21,9 +42,9 @@
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         @Html.Raw(JavaScriptSnippet.FullScript)
-        @RenderSection("Styles", required: false)        
+        @RenderSection("Styles", required: false)
     </head>
-    <body id="body">
+    <body id="body">        
         <!-- Loading -->
         <div id="loadingMask" class="loader loader-double"></div>
         <!-- Zone TOP Start-->
@@ -89,7 +110,7 @@
                     }
                 </div>
             </div>
-        </div>     
+        </div>
 
         <!-- Navbar -->
         <nav id="mainNavbar" class="navbar navbar-inverse">
@@ -113,11 +134,171 @@
             </div>
         </nav>        
         <!-- Zone TOP End-->
+        
+        <!-- Full Width Slider Start -->
+        <div>
+            @{
+                var fullWidthSlider = GlobalConfig.WebSiteWidgets.Where(x => x.Zone == "FullWidthSlider" && x.LayoutName == ViewBag.CurrentLayout).ToList();
+                if (fullWidthSlider != null && fullWidthSlider.Count > 0)
+                {
+                    <div class="fullWidthSlider">
+                        @foreach (var item in fullWidthSlider)
+                {
+                    var widgets = GlobalConfig.Widgets.Where(x => x.WidgetId == item.WidgetId).ToList();
+                    foreach (var widget in widgets)
+                    {
+                        widget.Init();
+                                @*<div>
+                                <div class='panel panel-default'>
+                                    <div class='panel-heading'>
+                                        @Html.Raw(widget.RenderTitle())
+                                    </div>
+                                    <div class='panel-body'>*@
+                                @Html.Raw(widget.RenderBody())
+                                @*</div>
+                                        <div class='panel-footer'>
+                                            @Html.Raw(widget.RenderFooter())
+                                        </div>
+                                    </div>
+                                </div>*@
+                            }
+                        }
+                    </div>
+                }
+            }
+        </div>
+        <!-- Full Width Slider End -->
 
         <!--  Main Body Start -->
-        <div class="container mainBody"> 
+        <div class="container mainBody">   
+            <!-- Left Column start -->
+            @if (hasLeftColumn)
+            {
+                <div class="col-sm-2 pull-left">
+                    <!-- Left Menu Start -->
+                    @if (menusLeft != null && menusLeft.Count > 0)
+                    {
+                        <div class="col-md-12">
+                            @foreach (var item in menusLeft)
+                            {
+                                foreach (var menuItem in item.MenuItems)
+                                {
+                                    <a href="@menuItem.Url">@menuItem.Name</a><br />
+                                    foreach (var mi2 in menuItem.Childrens)
+                                    {
+                                        <span>&nbsp;&nbsp;--</span><a href="@mi2.Url">@mi2.Name</a><br />
+                                        foreach (var mi3 in mi2.Childrens)
+                                        {
+                                            <span>&nbsp;&nbsp;&nbsp;&nbsp;--</span><a href="@mi3.Url">@mi3.Name</a><br />
+                                            foreach (var mi4 in mi3.Childrens)
+                                            {
+                                                <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;--</span><a href="@mi4.Url">@mi4.Name</a><br />
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        </div>
+                        <div class="clearfix"></div>
+                    }
+                    <!-- Left Menu End -->
+                    <!-- Left Sidebar Start -->
+                    @if (zoneLeftWidgets != null && zoneLeftWidgets.Count > 0)
+                    {
+                        <div class="row">
+                            @foreach (var item in zoneLeftWidgets)
+                            {
+                                var widgets = GlobalConfig.Widgets.Where(x => x.WidgetId == item.WidgetId).ToList();
+                                foreach (var widget in widgets)
+                                {
+                                    widget.Init();
+                                    <div>
+                                        <div class='panel panel-default'>
+                                            <div class='panel-heading'>
+                                                @Html.Raw(widget.RenderTitle())
+                                            </div>
+                                            <div class='panel-body'>
+                                                @Html.Raw(widget.RenderBody())
+                                            </div>
+                                            <div class='panel-footer'>
+                                                @Html.Raw(widget.RenderFooter())
+                                            </div>
+                                        </div>
+                                    </div>
+                                }
+                            }
+                        </div>
+                    }
+                    <!-- Left Sidebar End -->
+                </div>
+            }
+            <!-- Left Column end -->
+
+            <!-- Right Column start -->
+            @if (hasRightColumn)
+            {
+                <div class="col-sm-2 pull-right">
+                    <!-- Right Menu Start -->
+                    @if (menusRight != null && menusRight.Count > 0)
+                    {
+                        <div class="col-md-12">
+                            @foreach (var item in menusRight)
+                            {
+                                foreach (var menuItem in item.MenuItems)
+                                {
+                                    <a href="@menuItem.Url">@menuItem.Name</a><br />
+                                    foreach (var mi2 in menuItem.Childrens)
+                                    {
+                                        <span>&nbsp;&nbsp;--</span><a href="@mi2.Url">@mi2.Name</a><br />
+                                        foreach (var mi3 in mi2.Childrens)
+                                        {
+                                            <span>&nbsp;&nbsp;&nbsp;&nbsp;--</span><a href="@mi3.Url">@mi3.Name</a><br />
+                                            foreach (var mi4 in mi3.Childrens)
+                                            {
+                                                <span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;--</span><a href="@mi4.Url">@mi4.Name</a><br />
+                                            }
+                                        }
+                                    }
+                                }
+                            }
+                        </div>
+                        <div class="clearfix"></div>
+                    }
+                    <!-- Right Menu End -->
+                    <!-- Right Sidebar Start -->
+                    @if (zoneRightWidgets != null && zoneRightWidgets.Count > 0)
+                    {
+                        <div class="row">
+                            @foreach (var item in zoneRightWidgets)
+                            {
+                                var widgets = GlobalConfig.Widgets.Where(x => x.WidgetId == item.WidgetId).ToList();
+                                foreach (var widget in widgets)
+                                {
+                                    widget.Init();
+                                    <div>
+                                        <div class='panel panel-default'>
+                                            <div class='panel-heading'>
+                                                @Html.Raw(widget.RenderTitle())
+                                            </div>
+                                            <div class='panel-body'>
+                                                @Html.Raw(widget.RenderBody())
+                                            </div>
+                                            <div class='panel-footer'>
+                                                @Html.Raw(widget.RenderFooter())
+                                            </div>
+                                        </div>
+                                    </div>
+                                }
+                            }
+                        </div>
+                    }
+                    <!-- Right Sidebar End -->
+                </div>
+            }
+            <!-- Right Column end -->
+
             <!-- Main content Start -->
-            <div class="col-md-12">
+            <div class="col-md-@bodyClassWidth">
                 <!-- Featured Start -->
                 <div class="Featured">
                     @{
@@ -149,19 +330,13 @@
                             </div>
                         }
                     }
-                </div>              
-                <!-- Featured End -->
-
-                <!-- Container for showing global messages. -->
-                <div class="row">
-                    <div id="globalMessageContainer" class="ncc-global-message">
-
-                    </div>
                 </div>
+                <!-- Featured End -->
 
                 @RenderBody()
             </div>
             <!-- Main content End -->
+
         </div>
         <!--  Main Body End -->
 
