--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Cms/Views/CmsPage/Index.cshtml
@@ -10,6 +10,8 @@
         Layout = "_" + Model.Layout;
     }
     ViewData["Title"] = Model.Title;
+    ViewData["MetaDescription"] = Model.MetaDescription;
+    ViewData["MetaKeyword"] = Model.MetaKeyword;
 }
  
 @section Styles{
