--- a/NetCoreCMS.Web/Themes/DefaultDark/Shared/Layouts/_HomeLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/DefaultDark/Shared/Layouts/_HomeLayout.cshtml
@@ -30,6 +30,9 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="@ViewData["MetaDescription"]">
+        <meta name="keywords" content="@ViewData["MetaKeyword"]">
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>@ViewData["Title"] - @ViewBag.WebSite.SiteTitle</title>
 
         <link href="~/css/ncc-common.css" rel="stylesheet" />
