--- a/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/Parts/_Head.cshtml
+++ b/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/Parts/_Head.cshtml
@@ -4,6 +4,9 @@
 
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<meta name="description" content="@ViewData["MetaDescription"]">
+<meta name="keywords" content="@ViewData["MetaKeyword"]">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <title>@ViewData["Title"] - @ViewBag.WebSite.SiteTitle</title>
 
 <link href="~/css/ncc-common.css" rel="stylesheet" />
@@ -12,8 +15,6 @@
 <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
 <link rel="stylesheet" href="~/Themes/NccSeventeen/css/site.css" />
 <link href="~/lib/css-loader/dist/css-loader.css" rel="stylesheet" />
-
-
 
 <script src="~/lib/jquery/dist/jquery.js"></script>
 <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
