working on user management.

--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/Admin/Settings.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/Admin/Settings.cshtml
@@ -80,11 +80,11 @@
             <div class="col-sm-10">
                 <select asp-for="NewUserRole" type="text" class="form-control" id="NewUserRole" name="NewUserRole">
                     <option value="">Select new user role</option>
-                    <option value="Administrator">Administrator</option>
-                    <option value="Author">Author</option>
+                    <option value="Administrator">Administrator</option>                    
                     <option value="Editor">Editor</option>
+                    <option value="Author">Author</option>
                     <option value="Contributor">Contributor</option>  
-                    <option value="Reader">Subscriber</option>  
+                    <option value="Subscriber">Subscriber</option>  
                     
                 </select>
                 <span asp-validation-for="NewUserRole" class="text-danger"></span>
