--- a/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/Users/Index.cshtml
+++ b/NetCoreCMS.Web/Core/NetCoreCMS.Modules.Admin/Views/Users/Index.cshtml
@@ -7,6 +7,7 @@
     Layout = Constants.AdminLayoutName;
     ViewData["PageTitle"] = "Users";
     ViewData["PageSubtitle"] = "Users";
+    var searchKey = " ";
 }
 
 <div class="row">
@@ -28,12 +29,18 @@
                     </div>        
                 </div>
                 <div class="col-lg-6 pull-right" >
-                    <div class="col-sm-8">
-                        <input type="text" id="txt_search_text" class="form-control" />
-                    </div>
-                    <div class="col-sm-2">
-                        <input type="button" id="btn_search_user" value="Search" class="btn btn-default" />
-                    </div>                     
+                    <form method="post" action="/Users/Index" >
+                        <div class="col-sm-8">
+                            @if (ViewBag.SearchKey != null)
+                            {
+                                searchKey = ViewBag.SearchKey;
+                            }
+                            <input type="text" id="searchKey" value="@searchKey" name="searchKey" class="form-control" />
+                        </div>
+                        <div class="col-sm-2">
+                            <input type="submit" id="btn_search_user" value="Search" class="btn btn-default" />
+                        </div>
+                    </form>
                 </div>
 
             </div>
@@ -41,7 +48,7 @@
             <table class="table table-striped">
                 <tr><th>Id</th><th>User Name</th><th>Full Name</th><th>Email</th><th>Mobile</th><th>Roles</th><th>Action</th></tr>
                 @foreach(var user in Model){
-                    <tr> <td class="cls_user_chk"> <input type="checkbox" id="chk_@user.Id"  data-user-id="@user.Id" /> @user.Id</td><td>@user.UserName</td><td>@user.FullName</td><td>@user.Email</td><td>@user.Mobile</td><td>@user.Role</td><td><a href="~/Users/Update/Id=@user.Id">Update</a></td></tr>
+                    <tr> <td class="cls_user_chk"> <input type="checkbox" id="chk_@user.Id"  data-user-id="@user.Id" /> @user.Id</td><td>@user.UserName</td><td>@user.FullName</td><td>@user.Email</td><td>@user.Mobile</td><td>@user.Role</td><td><a href="~/Users/Update/?userId=@user.Id">Update</a></td></tr>
                 }
             </table>
             
