--- a/NetCoreCMS.Web/Modules/NetCoreCMS.ImageSlider/Views/ImageSliderHome/Index.cshtml
+++ b/NetCoreCMS.Web/Modules/NetCoreCMS.ImageSlider/Views/ImageSliderHome/Index.cshtml
@@ -1,23 +1,88 @@
-﻿@using NetCoreCMS.Notice.Models
+﻿@using NetCoreCMS.ImageSlider.Models
 @using System.Collections
-@{ 
-    Layout = Constants.SiteLayoutName;
+@model NccImageSlider
+@{
+    Layout = Constants.AdminLayoutName;
+    ViewData["PageTitle"] = "Image Slider Manage";
+    ViewData["PageSubtitle"] = "Manage image slider contents and design";
 }
-@model List<NccNotice>
+    
+<div class="row">
+    <div class="col-lg-12">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                @ViewData["PageSubtitle"]
+                @*<div class="pull-right"><a asp-controller="NoticeHome" asp-action="CreateEdit" class="btn btn-outline btn-primary btn-xs">Add New</a></div>*@ 
+            </div>
+            <div class="panel-body">                
 
-<div>
-    @foreach (var item in Model)
-    {
-        var len = item.Content.Length;
-        if (len > 200)
-        {
-            len = 200;
-        }
+                <form id="imageSliderUpdateForm" class="form-horizontal" asp-controller="ImageSliderHome" asp-action="Index" method="post">
+                    <input type="hidden" asp-for="Id" value="@Model.Id" />
+                    @*<input type="hidden" asp-for="TotalSlide" value="@Model.TotalSlide" />*@
+                    <input type="hidden" asp-for="Status" value="@Model.Status" />
+                    <div class="col-sm-6 pull-left">                        
+                        <div class="form-group">
+                            <label class="col-md-3 text-right">Style </label>
+                            <div class="col-md-9">
+                                <input type="text" class="form-control" asp-for="Style" placeholder="" value="@Model.Style" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 text-right">Total Slide </label>
+                            <div class="col-md-9">
+                                <input type="text" class="form-control" asp-for="TotalSlide" placeholder="" value="@Model.TotalSlide" />
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-md-3 text-right">Interval </label>
+                            <div class="col-md-9">
+                                <input type="text" class="form-control" asp-for="Interval" placeholder="" value="@Model.Interval" />
+                            </div>
+                        </div>
 
-        <div style="border: dashed 1px gray;">
-            <div><h3>@item.Title</h3></div>
-            <div>@item.Content.Substring(0,len) ... <a href="~/NoticeHome/Details/?Id=@item.Id">More</a></div>
+                        <table id="pageListDt" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                            <thead>
+                                <tr>
+                                    <th class="text-center">Sl.</th>
+                                    <th>Path</th>
+                                    <th>Description (Html)</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in ViewBag.NccImageSliderItemList)
+                                {
+                                    <tr>
+                                        <td class="text-center">@(item.Order+1)</td>
+                                        <td><input type="text" class="form-control" name="itemPath[]" placeholder="" value="@item.Path" /></td>
+                                        <td>
+                                            <textarea class="form-control" name="description[]" placeholder="" >@item.Description</textarea>
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+
+                        </table>
+
+                        <div>
+                            <input type="submit" class="btn btn-primary" />
+                        </div>
+
+                    </div>
+
+
+                </form>
+            </div>
+            <!-- /.panel-body -->
         </div>
-        <br/>
-    }
+        <!-- /.panel -->
+    </div>
 </div>
+
+
+
+@section Scripts{
+    <link href="~/lib/DataTables/dataTables.bootstrap.css" rel="stylesheet" />
+    <link href="~/lib/DataTables/jquery.dataTables.min.css" rel="stylesheet" />
+    <script src="~/lib/DataTables/jquery.dataTables.min.js"></script>
+    <script src="~/lib/DataTables/dataTables.bootstrap.min.js"></script>
+}
