--- a/NetCoreCMS.Web/Modules/NetCoreCMS.ImageSlider/Views/Widgets/ImageSlider.cshtml
+++ b/NetCoreCMS.Web/Modules/NetCoreCMS.ImageSlider/Views/Widgets/ImageSlider.cshtml
@@ -1,9 +1,64 @@
-﻿@using NetCoreCMS.Notice.Models
+﻿@using NetCoreCMS.ImageSlider.Models
 @using System.Collections
 
-@model List<NccNotice>
-
-<div style='width:100%; text-align:center; overflow:hidden; max-height:100px;'>
+@model NccImageSlider
+<div style="@Model.Style">
+    <div id="nccImageSlider" class="carousel slide" data-ride="carousel" data-interval="@Model.Interval">
+        <ol class="carousel-indicators">
+            @{var i = 0; }
+            @foreach (var item in Model.ImageItems)
+            {
+                if (i == 0)
+                {
+                        <li data-target="#nccImageSlider" data-slide-to="@i" class="active"></li>
+                }
+                else
+                {
+                        <li data-target="#nccImageSlider" data-slide-to="@i"></li>
+                }
+                i++;
+            }
+        </ol>
+        <div class="carousel-inner" role="listbox">
+            @{var j = 0; }
+            @foreach (var item in Model.ImageItems)
+            {
+                if (j == 0)
+                {
+                        <div class="item active">
+                            <img src="@item.Path" alt="Ncc Slider Image" class="img-responsive" width="100%">
+                            <div class="carousel-caption" role="option">
+                                <p>
+                                    @Html.Raw(item.Description)
+                                </p>
+                            </div>
+                        </div>
+                }
+                else
+                {
+                        <div class="item">
+                            <img src="@item.Path" alt="Ncc Slider Image" class="img-responsive" width="100%">
+                            <div class="carousel-caption" role="option">
+                                <p>
+                                    @item.Description
+                                </p>
+                            </div>
+                        </div>
+                }
+                j++;
+            }
+        </div>
+        <a class="left carousel-control" href="#nccImageSlider" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#nccImageSlider" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+</div>
+@*<div style='width:100%; text-align:center; overflow:hidden; max-height:100px;'>
     <marquee behavior="scroll" direction="up" scrollamount="5" height="100">
         @foreach (var item in Model)
         {
@@ -11,4 +66,4 @@
         }
         <div><a href="~/NoticeHome/Index">View All</a></div>    
     </marquee>
-</div>
+</div>*@
