--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_SiteLayout.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/_SiteLayout.cshtml
@@ -269,7 +269,7 @@
             <!-- Main content Start -->
             <div class="col-md-@bodyClassWidth">
                 <!-- Featured -->
-                <div class="Featured">
+                <div class="row Featured">
                     @{
                         var featured = GlobalConfig.WebSiteWidgets.Where(x => x.Zone == "Featured" && x.LayoutName == ViewBag.CurrentLayout).ToList();
                         if (featured != null && featured.Count > 0)
