--- a/NetCoreCMS.Web/Modules/NetCoreCMS.ImageSlider/Views/Widgets/ImageSlider.cshtml
+++ b/NetCoreCMS.Web/Modules/NetCoreCMS.ImageSlider/Views/Widgets/ImageSlider.cshtml
@@ -2,23 +2,27 @@
 @using System.Collections
 
 @model NccImageSlider
-<div style="@Model.Style">
-    <div id="nccImageSlider" class="carousel slide" data-ride="carousel" data-interval="@Model.Interval">
-        <ol class="carousel-indicators">
-            @{var i = 0; }
-            @foreach (var item in Model.ImageItems)
-            {
-                if (i == 0)
+
+<div style="@Model.ContainerStyle">
+    <div id="nccImageSlider" class="carousel slide" data-ride="carousel" data-interval="@(Model.Interval * 1000)">
+        @if (Model.ShowNav == true)
+        {
+            <ol class="carousel-indicators">
+                @{var i = 0; }
+                @foreach (var item in Model.ImageItems)
                 {
-                        <li data-target="#nccImageSlider" data-slide-to="@i" class="active"></li>
+                    if (i == 0)
+                    {
+                            <li data-target="#nccImageSlider" data-slide-to="@i" class="active"></li>
+                    }
+                    else
+                    {
+                            <li data-target="#nccImageSlider" data-slide-to="@i"></li>
+                    }
+                    i++;
                 }
-                else
-                {
-                        <li data-target="#nccImageSlider" data-slide-to="@i"></li>
-                }
-                i++;
-            }
-        </ol>
+            </ol>
+        }
         <div class="carousel-inner" role="listbox">
             @{var j = 0; }
             @foreach (var item in Model.ImageItems)
@@ -26,7 +30,7 @@
                 if (j == 0)
                 {
                         <div class="item active">
-                            <img src="@item.Path" alt="Ncc Slider Image" class="img-responsive" width="100%">
+                            <img src="@item.Path" alt="Ncc Slider Image" class="img-responsive" width="@Model.ImageWidth" height="@Model.ImageHeight">
                             <div class="carousel-caption" role="option">
                                 <p>
                                     @Html.Raw(item.Description)
@@ -37,10 +41,10 @@
                 else
                 {
                         <div class="item">
-                            <img src="@item.Path" alt="Ncc Slider Image" class="img-responsive" width="100%">
+                            <img src="@item.Path" alt="Ncc Slider Image" class="img-responsive" width="@Model.ImageWidth" height="@Model.ImageHeight">
                             <div class="carousel-caption" role="option">
                                 <p>
-                                    @item.Description
+                                    @Html.Raw(item.Description)
                                 </p>
                             </div>
                         </div>
@@ -48,14 +52,17 @@
                 j++;
             }
         </div>
-        <a class="left carousel-control" href="#nccImageSlider" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#nccImageSlider" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
+        @if (Model.ShowSideNav == true)
+        {
+            <a class="left carousel-control" href="#nccImageSlider" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#nccImageSlider" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        }
     </div>
 </div>
 @*<div style='width:100%; text-align:center; overflow:hidden; max-height:100px;'>
